NetBSD Problem Report #58640

From www@netbsd.org  Sun Aug 25 14:34:47 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
	 key-exchange X25519 server-signature RSA-PSS (2048 bits)
	 client-signature RSA-PSS (2048 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 005AF1A923F
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 25 Aug 2024 14:34:46 +0000 (UTC)
Message-Id: <20240825143446.01B821A9241@mollari.NetBSD.org>
Date: Sun, 25 Aug 2024 14:34:46 +0000 (UTC)
From: campbell+netbsd@mumble.net
Reply-To: campbell+netbsd@mumble.net
To: gnats-bugs@NetBSD.org
Subject: alignof is not available in kernel code
X-Send-Pr-Version: www-1.0

>Number:         58640
>Category:       kern
>Synopsis:       alignof is not available in kernel code
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 25 14:35:00 +0000 2024
>Closed-Date:    Tue Oct 08 23:37:30 +0000 2024
>Last-Modified:  Tue Oct 08 23:37:30 +0000 2024
>Originator:     Taylor R Campbell
>Release:        current, 10, 9, ...
>Organization:
The AlignedBSD Kernelation
>Environment:
>Description:
The alignof macro, which was introduced in C11, is defined in the <stdalign.h> header file, which is not available in the kernel build environment.

Instead, kernel code has to use the ugly _Alignof builtin.
>How-To-Repeat:
reach for alignof, stub toe on the sharp edge of _Alignof
>Fix:
Yes, please!

Maybe add sys/stdalign.h?

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58640 CVS commit: src
Date: Sun, 25 Aug 2024 18:10:41 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sun Aug 25 22:10:41 UTC 2024

 Modified Files:
 	src/distrib/sets/lists/comp: mi
 	src/include: Makefile
 	src/sys/sys: Makefile
 Added Files:
 	src/sys/sys: stdalign.h
 Removed Files:
 	src/include: stdalign.h

 Log Message:
 PR/58640: Riastradh: Provide sys/stdalign.h


 To generate a diff of this commit:
 cvs rdiff -u -r1.2471 -r1.2472 src/distrib/sets/lists/comp/mi
 cvs rdiff -u -r1.147 -r1.148 src/include/Makefile
 cvs rdiff -u -r1.1 -r0 src/include/stdalign.h
 cvs rdiff -u -r1.183 -r1.184 src/sys/sys/Makefile
 cvs rdiff -u -r0 -r1.1 src/sys/sys/stdalign.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Tue, 08 Oct 2024 23:37:30 +0000
State-Changed-Why:
fixed in HEAD, not important to pull up to 10 or 9


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.