PR/58640: Riastradh: Provide sys/stdalign.h